WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226670
REGRESSION(
r275765
) When ignoring HSTS, sometimes loads fail
https://bugs.webkit.org/show_bug.cgi?id=226670
Summary
REGRESSION(r275765) When ignoring HSTS, sometimes loads fail
Alex Christensen
Reported
2021-06-04 17:41:47 PDT
REGRESSION(
r275765
) When ignoring HSTS, sometimes loads fail
Attachments
Patch
(1.32 KB, patch)
2021-06-04 17:42 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(1.35 KB, patch)
2021-06-04 17:43 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-06-04 17:42:41 PDT
Created
attachment 430635
[details]
Patch
Alex Christensen
Comment 2
2021-06-04 17:43:20 PDT
Created
attachment 430636
[details]
Patch
Chris Dumez
Comment 3
2021-06-04 17:44:06 PDT
Comment on
attachment 430636
[details]
Patch Why don't we treat warnings as errors in WebKit2? Seems we should have gotten an unused parameter warning here..
Alex Christensen
Comment 4
2021-06-04 17:45:30 PDT
Comment on
attachment 430636
[details]
Patch We don't treat unused parameters as warnings in ObjC because the language requires unused parameters to be named in selector calls. We ought to be able to do it for non-selector functions like this, though.
Chris Dumez
Comment 5
2021-06-04 17:50:04 PDT
<
rdar://78066692
>
EWS
Comment 6
2021-06-04 19:16:05 PDT
Committed
r278517
(
238516@main
): <
https://commits.webkit.org/238516@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430636
[details]
.
Darin Adler
Comment 7
2021-06-04 21:10:53 PDT
Alex is right. When I turned on unused parameter warnings, I didn’t do it for Objective-C because we’d have to add UNUSED_PARAM in so many places. And I really prefer the "leave out the variable name" over the "use the UNUSED_PARAM macro" style. But that wasn’t a great decision for the ages. I’d love to turn it on now even for the Objective-C files.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug