REGRESSION(r275765) When ignoring HSTS, sometimes loads fail https://bugs.webkit.org/show_bug.cgi?id=226670 <rdar://problem/78066692>

Patch by Alex Christensen <achristensen@webkit.org> on 2021-06-04
Reviewed by Chris Dumez.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(setIgnoreHSTS):
Use the value passed in to the function instead of always false.

Canonical link: https://commits.webkit.org/238516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278517 268f45cc-cd09-0410-ab3c-d52691b4dbfc